Various style improvements.